# educational-risk-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
models/: features.joblib  risk_model.joblib
notebooks/: 01_eda.ipynb
src/data/: prepare.py
tests/: test_pipeline.py
