[tool.poetry]
name = "educational-risk-prediction"
version = "0.1.0"
description = "Predição de risco educacional — Associação Passos Mágicos"
authors = ["Gabriel Furtado <gabriel@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
xgboost = "^2.0"
mlflow = "^2.12"
matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^5.20"
streamlit = "^1.33"
shap = "^0.45"
imbalanced-learn = "^0.12"
joblib = "^1.3"
pyarrow = "^16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
ruff = "^0.4"
jupyter = "^1.0"
ipykernel = "^6.29"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"